--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -9,8 +9,8 @@
 @syntax-background-cursor-color: #333435;
 
 // Guide colors
-@syntax-wrap-guide-color          : #404040;
-@syntax-indent-guide-color        : #404040;
+@syntax-wrap-guide-color          : #606060;
+@syntax-indent-guide-color        : #606060;
 @syntax-invisible-character-color : rgba(64,64,64,.5);
 
 // For find and replace markers
